Fix that linked anchors are behind the fixed header navbar.

--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -60,6 +60,8 @@ a:visited {
 	-moz-transition: all 0.3s ease-out;  /* Firefox 4-15 */
 	-o-transition: all 0.3s ease-out;  /* Opera 10.50–12.00 */
 	transition: all 0.3s ease-out;  /* Chrome 26, Firefox 16+, IE 10+, Opera 12.50+ */
+	border-top: 50px solid transparent;
+	margin-top: -50px;
 }
 a:hover {
   color: silver;
